--- a/css/index.css
+++ b/css/index.css
@@ -60,9 +60,9 @@
 
 #eventsGrid > div {
   float: left;
-  width: calc(100% / 2 - 4px);
+  width: calc(100% / 2 - 10px);
   box-sizing: border-box;
-  margin: 2px;
+  margin: 5px;
   border-radius: 5px;
   text-align: left;
   position: relative;
@@ -202,7 +202,7 @@
 #eventModal .modalImg{
   border-radius: 20px 20px 0 0;
   padding-top: 60%;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
